chore: folders added, mediator DI package added

--- a/focker-prototype/focker-prototype.csproj
+++ b/focker-prototype/focker-prototype.csproj
@@ -9,8 +9,14 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.13" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Common\" />
+    <Folder Include="Queries\" />
   </ItemGroup>
 
 </Project>
